--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint-staged": "^11.1.2",
     "markdown-interpolate": "^0.0.7",
     "simple-git-hooks": "^2.6.1",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "lint-staged": {
     "*.ts": [
