Deploy using `gh-pages`

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "reset": "yarn run clean && lerna clean --yes && rm -rf node_modules yarn.lock && yarn install",
     "version": "lerna version --force-publish",
     "website-build": "yarn run website-clean && yarn run build && yarn run docs && node packages/single-page-markdown-website/lib/cli.js README.md",
-    "website-clean": "rm -rf build"
+    "website-clean": "rm -rf build",
+    "website-deploy": "yarn run website-build && gh-pages --dist build"
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
