--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,21 +16,21 @@
     "lib"
   ],
   "scripts": {
-    "build": "yarn run clean && concurrently --raw 'yarn run build-html' 'yarn run build-scss' 'yarn run build-ts'",
+    "build": "yarn run clean && concurrently --raw 'yarn run build-html' 'yarn run build-css' 'yarn run build-ts'",
     "build-html": "mkdirp lib && cp src/html/index.html lib",
-    "build-scss": "sass --load-path ../../node_modules --no-source-map --stop-on-error --style compressed src/scss/style.scss lib/style.css",
+    "build-css": "cleancss --output lib/style.css src/css/reset.css src/css/variables.css src/css/base.css 'src/css/components/*.css'",
     "build-ts": "webpack --mode production",
     "clean": "rm -rf '*.log' lib",
-    "fix": "concurrently --raw 'yarn run fix-scss' 'yarn run fix-ts'",
-    "fix-scss": "stylelint --fix 'src/**/*.scss'",
+    "fix": "concurrently --raw 'yarn run fix-css' 'yarn run fix-ts'",
+    "fix-css": "stylelint --fix 'src/**/*.css'",
     "fix-ts": "eslint --fix webpack.config.js 'src/**/*.ts'",
-    "lint": "concurrently --raw 'yarn run lint-scss' 'yarn run lint-ts'",
-    "lint-scss": "stylelint 'src/**/*.scss'",
+    "lint": "concurrently --raw 'yarn run lint-css' 'yarn run lint-ts'",
+    "lint-css": "stylelint 'src/**/*.css'",
     "lint-ts": "eslint webpack.config.js 'src/**/*.ts'",
     "prepublishOnly": "yarn run build",
-    "watch": "yarn run clean && concurrently --raw 'yarn run watch-html' 'yarn run watch-scss' 'yarn run watch-ts'",
+    "watch": "yarn run clean && concurrently --raw 'yarn run watch-html' 'yarn run watch-css' 'yarn run watch-ts'",
     "watch-html": "chokidar --command 'yarn run build-html' --initial --silent 'src/html/**/*.html'",
-    "watch-scss": "chokidar --command 'yarn run build-scss' --initial --silent 'src/scss/**/*.scss'",
+    "watch-css": "chokidar --command 'yarn run build-css' --initial --silent 'src/css/**/*.css'",
     "watch-ts": "chokidar --command 'webpack --mode development' --initial --silent 'src/ts/**/*.ts'"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-yuanqing": "^0.0.5",
+    "clean-css-cli": "^5.4.2",
     "mkdirp": "^1.0.4",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
