--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@single-page-markdown-website/frontend",
-  "version": "0.0.25-alpha.0",
+  "version": "0.0.25",
   "publishConfig": {
     "access": "public"
   },
